imported react-bootstrap to fix nav collapse

--- a/src/Components/Footer/Assets/styles/Footer.css
+++ b/src/Components/Footer/Assets/styles/Footer.css
@@ -6,3 +6,7 @@ footer {
 footer a {
   text-decoration: none;
 }
+
+footer a:hover {
+  color: #333 !important;
+}
